Initial setup for new puzzles area of site. Also fixed dark mode compatibility across all pages.

--- a/css/mvp.css
+++ b/css/mvp.css
@@ -1,19 +1,20 @@
-/* MVP.css v1.12 - https://github.com/andybrewer/mvp */
+/* MVP.css v1.15 - https://github.com/andybrewer/mvp */
 
 :root {
     --active-brightness: 0.85;
     --border-radius: 5px;
     --box-shadow: 2px 2px 10px;
     --color-accent: #118bee15;
-    --color-bg: #222;
-    --color-bg-secondary: #666;
+    --color-bg: #fff;
+    --color-bg-secondary: #e9e9e9;
     --color-link: #118bee;
     --color-secondary: #920de9;
     --color-secondary-accent: #920de90b;
-    --color-shadow: #000;
+    --color-shadow: #f4f4f4;
     --color-table: #118bee;
-    --color-text: #eaeaea;
-    --color-text-secondary: #aaa;
+    --color-text: #000;
+    --color-text-secondary: #999;
+    --color-scrollbar: #cacae8;
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     --hover-brightness: 1.2;
     --justify-important: center;
@@ -37,6 +38,16 @@
         --color-table: #0097fc;
         --color-text: #f7f7f7;
         --color-text-secondary: #aaa;
+    }
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    html {
+        scroll-behavior: auto;
     }
 }
 
@@ -217,6 +228,7 @@ h4,
 h5,
 h6 {
     line-height: var(--line-height);
+    text-wrap: balance;
 }
 
 mark {
@@ -272,12 +284,12 @@ a {
     text-decoration: underline;
 }
 
-a:active {
-    filter: brightness(var(--active-brightness));
-}
-
 a:hover {
     filter: brightness(var(--hover-brightness));
+}
+
+a:active {
+    filter: brightness(var(--active-brightness));
 }
 
 a b,
@@ -300,15 +312,15 @@ input[type="submit"] {
     font-family: var(--font-family);
 }
 
-button:active,
-input[type="submit"]:active {
-    filter: brightness(var(--active-brightness));
-}
-
 button:hover,
 input[type="submit"]:hover {
     cursor: pointer;
     filter: brightness(var(--hover-brightness));
+}
+
+button:active,
+input[type="submit"]:active {
+    filter: brightness(var(--active-brightness));
 }
 
 a b,
@@ -413,6 +425,7 @@ textarea {
 }
 
 input[type="text"],
+input[type="password"]
 textarea {
     width: calc(100% - 1.6rem);
 }
@@ -468,11 +481,11 @@ table thead {
     padding: 0;
 }
 
-table thead th:first-child {
+table thead tr:first-child th:first-child {
     border-top-left-radius: var(--border-radius);
 }
 
-table thead th:last-child {
+table thead tr:first-child th:last-child {
     border-top-right-radius: var(--border-radius);
 }
 
@@ -506,20 +519,20 @@ blockquote footer {
 
 /* Scrollbars */
 * {
-	scrollbar-width: thin;
-	scrollbar-color: rgb(202, 202, 232) auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-scrollbar) transparent;
 }
 
 *::-webkit-scrollbar {
-	width: 5px;
-	height:5px;
+    width: 5px;
+    height: 5px;
 }
 
 *::-webkit-scrollbar-track {
-	background: transparent;
+    background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-	background-color:rgb(202, 202, 232);
-	border-radius: 10px;
+    background-color: var(--color-scrollbar);
+    border-radius: 10px;
 }
